# web-chat

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  progress.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_group_chat.py  0003_attachments.py  0004_message_actions.py  0005_member_role.py  0006_message_kind.py  0007_message_edits.py  0008_reply_forward.py  0009_notifications.py  0010_user_last_seen.py  (+4 more)
backend/app/: config.py  db.py  logging_config.py  main.py  message_policy.py  ratelimit.py  reactions.py  schemas.py  storage.py  timeutils.py
backend/tests/: conftest.py  test_attachments_multi.py  test_auth.py  test_config_security.py  test_contacts.py  test_conversations.py  test_conversations_batch.py  test_direct_conversations_batch.py  test_group_admin_ops.py  test_group_members.py  test_group_roles.py  test_groups_rest.py  test_logging.py  test_message_actions_rest.py  test_message_edit_model.py  test_message_edits_rest.py  test_messages_around.py  test_messages_batch.py  test_migration_0002.py  test_migration_0005_0006.py  test_migration_0008.py  test_migration_0011.py  test_migration_0012.py  test_migration_0013.py  test_migration_0014.py  test_models_group.py  test_notifications.py  test_notifications_batch.py  test_pins.py  test_presence.py  test_ratelimit.py  test_reaction_model.py  test_reaction_validation.py  test_recall.py  test_reply_forward_serialize.py  test_search.py  test_services_conversations.py  test_storage.py  test_unit.py  test_uploads.py  (+8 more)
(+194 files in other folders)
